# multiprocessor-programming

./: .gitignore  CMakeLists.txt  README.md  common.cpp  gpucalc.cpp  hello_opencl.cpp  image.cpp  main.cpp  zncc.cpp  zncc.hpp  zncc_common.cpp  zncc_opencl.cpp  zncc_openmp.cpp  zncc_plain.cpp  zncc_pthread.cpp
include/: CMakeLists.txt
lodepng/: lodepng.cpp
week2/: CMakeLists.txt  addcl.c  main.c
week3/: .gitignore  CMakeLists.txt  cl_support.cpp  image.cpp  main.cpp
week4/: .gitignore  CMakeLists.txt  image.cpp  main.cpp
week4/include/: lodepng.h
